force-app/main/default/objects/Loan_Status__c/Loan_Status__c.object-meta.xml
<CustomObject>
    <label>Loan Note</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Loan Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>