force-app/main/default/objects/Loan_Status__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description>Deal this Loan Status Update is related to</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Loan_Statuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>