force-app/main/default/objects/Loan_Status__c/fields/HOA_Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>HOA_Rec_Id__c</fullName>
    <externalId>true</externalId>
    <label>HOA Rec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>