force-app/main/default/objects/Loan_Status__c/fields/OrderInquiryId__c.field-meta.xml
<CustomField>
    <fullName>OrderInquiryId__c</fullName>
    <externalId>true</externalId>
    <label>OrderInquiryId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>