force-app/main/default/objects/Loan_Status__c/fields/OrderInquiryNoteId__c.field-meta.xml
<CustomField>
    <fullName>OrderInquiryNoteId__c</fullName>
    <externalId>true</externalId>
    <label>OrderInquiryNoteId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>