force-app/main/default/objects/Loan_Status__c/fields/Payoff_Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Rec_Id__c</fullName>
    <externalId>true</externalId>
    <label>Payoff Rec Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>