force-app/main/default/objects/Loan_Status__c/fields/Property_Title__c.field-meta.xml
<CustomField>
    <fullName>Property_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Title</label>
    <referenceTo>Property_Title__c</referenceTo>
    <relationshipLabel>Loan Notes</relationshipLabel>
    <relationshipName>Loan_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>