force-app/main/default/objects/Loan_Status__c/fields/Servicelink_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Servicelink_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Servicelink Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>