force-app/main/default/objects/Loan_Status__c/fields/Servicelink_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Servicelink_Item_Type__c</fullName>
    <label>Servicelink Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>