force-app/main/default/objects/Loan_Status__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject of this Loan Status update</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>