force-app/main/default/objects/Loan_Status__c/fields/Title_Order__c.field-meta.xml
<CustomField>
    <fullName>Title_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Order</label>
    <referenceTo>Title_Order__c</referenceTo>
    <relationshipLabel>Loan Notes</relationshipLabel>
    <relationshipName>Loan_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>